# openmc_regular_mesh_plotter

./: .gitignore  CITATION.cff  README.md  examples_from_readme.ipynb  pyproject.toml  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: ci_with_install.yml
dose_map_plotter/: core.py
examples/: create_statepoint_file_with_meshes_openmc.py  create_statepoint_file_with_meshes_openmc_dagmc.py  example.stl  examples_from_readme.py  minimal_example_with_2d_mesh.py  plot_mesh_with_geometry_slice.py  plot_mesh_with_slice.py  plot_minimal_2d_example.py  plot_minimal_example.py  plot_plotly_example.py  plot_regular_mesh_dose_tally.py  plot_regular_mesh_dose_tally_with_geometry.py  plot_regular_mesh_tally.py  plot_regular_mesh_tally_with_csg_geometry.py  plot_regular_mesh_tally_with_geometry.py  plot_regular_mesh_values.py  plot_regular_mesh_values_with_geometry.py  plot_sweep_through_slice_indexes.py  plot_two_tallies_combined.py  plot_with_custom_color_map.py
regular_mesh_plotter/: __init__.py  core.py  utils.py
src/openmc_regular_mesh_plotter/: __init__.py  app.py  core.py
src/regular_mesh_plotter/: __init__.py  core.py
tests/: create_statepoint_file_for_testing_using_csg.py  create_statepoint_file_for_testing_using_dagmc.py  test_plot_mesh.py  test_plot_mesh_with_slice.py  test_plot_regular_mesh_tally.py  test_plot_regular_mesh_values.py  test_plot_regular_mesh_values_with_geometry.py  test_slice_index_conversion.py  test_slice_stl.py  test_tally_finding.py  test_units.py
