[build-system]
requires = ["setuptools >= 65.4.0", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "openmc_regular_mesh_plotter"
authors = [
  { name="Jonathan Shimwell", email="mail@jshimwell.com" },
]
license = {file = "LICENSE.txt"}
description = "A Python package for creating plots of OpenMC regular mesh tallies with the underlying geometry"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["regular", "mesh", "openmc", "tally", "plot", "slice", "geometry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.1",
    "matplotlib>=3.4.2",
    "setuptools_scm",
]
dynamic = ["version"]


[tool.setuptools_scm]
write_to = "src/openmc_regular_mesh_plotter/_version.py"


[project.optional-dependencies]
tests = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/fusion-energy/openmc_regular_mesh_plotter"
"Bug Tracker" = "https://github.com/fusion-energy/openmc_regular_mesh_plotter/issues"

[tool.setuptools]
package-dir = {"" = "src"}
