[metadata]
name = regular_mesh_plotter
author = The Fusion Energy Development Team
author_email = mail@jshimwell.com
description = A Python package for creating publication quality plots of regular mesh tallies with the underlying geometry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/regular_mesh_plotter
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/regular_mesh_plotter
    Tracker = https://github.com/fusion-energy/regular_mesh_plotter/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.21.1
    matplotlib >= 3.4.2
    trimesh
    shapely
    scipy
    pandas
    dagmc_geometry_slice_plotter
    openmc_tally_unit_converter
    setuptools_scm

[options.extras_require]
tests = 
    pytest >= 5.4.3
    pytest-cov>=2.12.1
    openmc-dagmc-wrapper
    openmc_plasma_source
    stl_to_h5m

[flake8]
per-file-ignores = __init__.py:F401
